--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ A passionate ml developer specializes in designing and building machine learning
 </p>
 <div class="row">
 <div class="col-auto h-100">
-<a href="https://github.com/pranith7/pranith7" class="btn" download>
+<a href="https://drive.google.com/file/d/14uiZuJlhdI3tgwl_giYuxd3_UoEzsvBR/view?usp=share_link" class="btn" download>
 Resume
 </a>
 </div>
