--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ Resume
 </span>
 <span class="px-1">
 <a href="https://www.linkedin.com/in/pranith-pashikanti-7b5095191/" target="_blank" class="btn social-icon">
-<img src="fab fa-linkedin-in">
+<i class="fab fa-linkedin-in"></i>
 </a>
 </span>
 </span>
